change author name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-logo">
                 <i class="fab fa-github"></i>
                 <span>Git Mastery</span>
-                <span class="author-name">by Sheraz Zafar</span>
+                <span class="author-name">by Sheraz</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
